// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Card Support 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Card Support
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Form Configuration 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Form Configuration
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Inventory 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Inventory
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Location Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Location Management
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Plans 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Plans
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Product Catalogue 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Product Catalogue
  </span>
</button>
`;

exports[`containers/pages/Home renders Home correctly & changes Title of page 2: Team Management 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-k7429z ant-btn-link admin-link btn-links"
  type="button"
>
  <span>
    Team Management
  </span>
</button>
`;
